--- a/src/main/resources/templates/Common/Header.html
+++ b/src/main/resources/templates/Common/Header.html
@@ -5,7 +5,7 @@
     📞 0901 234 567 | 🚚 Miễn phí vận chuyển đơn từ 500k
   </div>
   <nav>
-    <a href="#" class="logo">🌸 GreenLife</a>
+    <a href="home" class="logo">🌸 GreenLife</a>
     <ul class="nav-center">
       <li><a href="home">Trang chủ</a></li>
       <li><a href="list" class="active">Sản phẩm</a></li>
@@ -50,5 +50,6 @@
       </div>
     </div>
   </nav>
+
   <script th:src="@{/js/Header.js}" defer></script>
 </header>
